--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1012,7 +1012,7 @@ frame. The basic ways of doing this can become quickly unreadable if there are
 many steps. For example, suppose we need to perform three operations on a data
 frame called `data`:  \index{pipe}\index{aaapipesymb@\vert{}>|see{pipe}}
 
-1)  add a new column `new_col` that is double another `old_col`
+1)  add a new column `new_col` that is double another `old_col`,
 2)  filter for rows where another column, `other_col`, is more than 5, and
 3)  select only the new column `new_col` for those rows.
 
