--- a/preface-text.Rmd
+++ b/preface-text.Rmd
@@ -33,7 +33,7 @@ six chapters, you will learn how to answer predictive, exploratory, and inferent
 data analysis questions with common methods in data science, including
 classification, regression, clustering, and estimation.
 In the final chapters 
-(\@ref(getting-started-with-jupyter)&mdash;\@ref(move-to-your-own-machine)), 
+(\@ref(getting-started-with-jupyter)&ndash;\@ref(move-to-your-own-machine)), 
 you will learn how to combine R code, formatted text, and images
 in a single coherent document with Jupyter, use version control for
 collaboration, and install and configure the software needed for data science
