numbered summarizing with nas section

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1244,7 +1244,7 @@ primary language at home is spoken by
 `r format(lang_summary$max_most_at_home[1], scientific = FALSE, big.mark = ",")`
 people.
 
-#### Calculating summary statistics when there are `NA`s {-}
+### Calculating summary statistics when there are `NA`s
 
 In data frames in R, the value `NA` is often used to denote missing data. 
 Many of the base R statistical summary functions 
